# grc-20

./: .gitignore  readme.md  reasoning.md  spec.md
.claude/: README.md
.claude/skills/: README.md
docs/: design-faq.md  requirements.md
docs/plans/: 2026-01-07-serializer-design.md
rust/: Cargo.toml  README.md
rust/crates/grc-20/: Cargo.toml
rust/crates/grc-20-bench/: Cargo.toml
rust/crates/grc-20-bench/src/: main.rs
rust/crates/grc-20-compare/: Cargo.toml
rust/crates/grc-20-compare/src/: main.rs
rust/crates/grc-20-proto-bench/: Cargo.toml  build.rs
rust/crates/grc-20-proto-bench/src/: grc20.proto  main.rs
rust/crates/grc-20/examples/: decode_file.rs
rust/crates/grc-20/src/: error.rs  genesis.rs  lib.rs  limits.rs
rust/crates/grc-20/src/codec/: edit.rs  mod.rs  op.rs  primitives.rs  value.rs
rust/crates/grc-20/src/model/: builder.rs  edit.rs  id.rs  mod.rs  op.rs  value.rs
rust/crates/grc-20/src/validate/: mod.rs
typescript/: PLAN.md  package-lock.json  package.json  readme.md  tsconfig.json  vitest.browser.config.ts
typescript/examples/: browser-demo.html  test-bundle.html
typescript/scripts/: benchmark.js  bundle-analyze.js
typescript/src/: index.ts
typescript/src/builder/: edit.ts  entity.ts  index.ts  relation.ts  update.ts
typescript/src/codec/: compression.ts  edit.ts  index.ts  op.ts  primitives.ts  value.ts
typescript/src/genesis/: index.ts  language.ts
typescript/src/test/: basic.test.ts
typescript/src/types/: edit.ts  id.ts  index.ts  op.ts  value.ts
typescript/src/util/: id.ts  index.ts
