[package]
name = "grc-20-compare"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
flate2 = "1.0"
grc-20 = { path = "../grc-20" }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zstd = "0.13"

[build-dependencies]
prost-build = "0.13"

[[bin]]
name = "compare"
path = "src/main.rs"
